@@ -13,7 +13,7 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/?? IAlibay, jaclark5, MohitKumar020291
+??/??/?? IAlibay, jaclark5, MohitKumar020291, orionarcher
 
  * 2.6.0
 
@@ -23,6 +23,7 @@ Fixes
     (PR #4163, Issue #4159)
 
 Enhancements
+  * Added a `exclude_same` kwarg to InterRDF (PR #4161)
   * LAMMPSDump Reader use of `continuous` option to stitch trajectories
     (Issue #3546)
 
